style.css
/* ... */
#main-nav .topnav-link:hover,
#main-nav .topnav-link.current {
	color: #fff !important;
	text-decoration: none;
}

.home {
	height: auto;
}

.home .container-wrapper {
	margin: auto;
}

.avatar img {
	width: 110px;
	height: 110px;
	padding: 1px;
	border: 3px solid #fff;
	margin-bottom: 20px;
}

.about {
	background: #fff;
}

.skills {

	position: relative;
}

.skills .percent {

	display: inline-block;
	line-height: 160px;
	font-family: 'Lato', serif;
	font-size: 50px;
	font-weight: 300;
	z-index: 2;
}

.skills .percent:after {
	content: '%';
	margin-left: 0.1em;
	font-size: 40px;
}

.skill_desc {

	position: relative;
}

.services .fullwidth-wrapper {
	padding: 100px 0;
	background: transparent;
}

@-webkit-keyframes iconanimation {
	0%, 100% {padding-top: 0px; }
	50% {padding-top: 20px; }
}

@-moz-keyframes iconanimation {
	0%, 100% {padding-top: 0px;}
	50% {padding-top: 20px;}
}

@-ms-keyframes iconanimation {
	0%, 100% {padding-top: 0px;}
	50% {padding-top: 20px;}
}

@-o-keyframes iconanimation {
	0%, 100% {padding-top: 0px;}
	50% {padding-top: 20px;}
}

@keyframes iconanimation {
	0%, 100% {padding-top: 0px;}
	50% {padding-top: 20px;}
}

.service:hover .icon-animation {
	-webkit-animation-name: iconanimation;
	-moz-animation-name: iconanimation;
	-ms-animation-name: iconanimation;
	-o-animation-name: iconanimation;
	animation-name: iconanimation;

	-webkit-animation-duration: 1.5s;
	-moz-animation-duration: 1.5s;
	-o-animation-duration: 1.5s;
	animation-duration: 1.5s;

	-webkit-animation-iteration-count: infinite;
	-moz-animation-iteration-count: infinite;
	-o-animation-iteration-count: infinite;
	animation-iteration-count: infinite;

	-webkit-animation-fill-mode: both;
	-moz-animation-fill-mode: both;
	-o-animation-fill-mode: both;
	animation-fill-mode: both;
}

.service .service-icon {
	border: 3px solid #ffffff;
	border-radius: 100%;
	display: table;
	text-align: center;
	width: 120px;
	height: 120px;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 20px;
	-webkit-transition: all .3s ease-in-out;
	-moz-transition: all .3s ease-in-out;
	-ms-transition: all .3s ease-in-out;
	-o-transition: all .3s ease-in-out;
	transition: all .3s ease-in-out;
}

.services .service-icon i.fa {
	color: #ffffff;
	margin: 0px auto;
	margin-bottom: 30px;
	text-align: center;
	display: table-cell;
	vertical-align: middle;
	width: 100%;
	height: 100%;
}

.services .services-list {
	margin-top: 30px;
}

.services .service h4 {
	margin-bottom: 10px;
}

.services .service p {
	font-size: 14px;
	line-height: 21px;
	padding: 0;
}

.services .item-list {
	border-left: 1px solid #D3D3D3;
	padding-left: 17px;
}

.pricing-tables .plan.first {
	border-bottom-left-radius: 4px;
	border-top-left-radius: 4px;
}

.pricing-tables .plan.last {
	border-bottom-right-radius: 4px;
	border-top-right-radius: 4px;
}

.pricing-tables .plan.recommended {
	border-bottom-left-radius: 4px;
	border-bottom-right-radius: 4px;
}

.pricing-tables .plan.recommended .head {
	margin-bottom: 20px;
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
}

.pricing-tables.attached .col-sm-4,
.pricing-tables.attached .col-md-4,
.pricing-tables.attached .col-sm-3,
.pricing-tables.attached .col-md-3 {
	padding-left: 0;
	padding-right: 0;
}

.pricing-tables.attached 

.pricing-tables.attached .plan .head {
	border-radius: 0;
}

.pricing-tables.attached .plan.recommended {
	border-radius: 4px;
}

.pricing-tables.attached .plan.recommended .head {
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
}

.pricing-tables.attached .plan.last {
	border-bottom-right-radius: 4px;
}

.pricing-tables.attached .plan.last .head {
	border-top-right-radius: 4px;
}

.pricing-tables.attached .plan.first {
	border-bottom-left-radius: 4px;
}

.pricing-tables.attached .plan.first .head {
	border-top-left-radius: 4px;
}

.plan .head {
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
	padding: 12px 16px;
	background: #470f0e;
	color: #fff;
}

.plan .head h1, .plan .head h2, .plan .head h3 {
	padding: 0;
	margin: 0;
	font-weight: 100;
}

.plan .price {
	border-top: 1px solid #eee;
	margin: 0 auto 30px auto;
	width: 80%;
}

.plan .price h3 {
	font-size: 82px;
	vertical-align: top;
	line-height: 1;
}

.plan .price h3 span {
	font-size: 38px;
	vertical-align: top;
	position: relative;
	margin: 6px 0 0 -7px;
	display: inline-block;
}

.plan .price h4 {
	color: #aaa;
	font-size: 14px;
}

.plan .button {
	margin: 0; }

.plan ul {
	list-style-type: none;
	padding: 20px;
	margin-top: 2px;
}

.plan ul li {
	line-height: 22px;
	margin-bottom: 15px;
	font-size: 14px;
	font-weight: 400;
}

.plan ul li a {
	text-decoration: underline;
	color: #e6e9ed;
}

.plan ul li:last-child {
	border-bottom: none;
}

.plan ul strong {
	font-weight: 700;
}

.plan.recommended {
	margin-top: 6px;
	box-shadow: 0 0 22px rgba(10, 10, 10, 0.16);
	position: relative;
	z-index: 99;
	border-radius: 4px;
}

.plan.recommended .head {
	border-top-left-radius: 4px;
	border-top-right-radius: 4px;
	background: #470f0e;
}

.plan.recommended .button {
	margin-bottom: 10px;
}

.portfolio-section {
	padding: 0;
}

.portfolio-section .fullwidth-wrapper {
	background: #fff;
	margin-top: -1px;
	padding-bottom: 100px;
	overflow: hidden;
}

.portfolio-container {
	max-width: 1200px;
	margin: 10px auto;
}

.portfolio-container .container {
	margin: auto;
	max-width: 100%;
	width: 100%;
}

.portfolio {
	text-align: left;
	overflow: visible !important;
	margin: 0 auto;
	background: #ffffff;
}

.image-container .img-responsive {
	width: 100%;
}

.portfolio-filter li {
	padding: 10px;
	display: inline-block;
}

.portfolio-filter li .button {
	padding: 5px 20px;
	font-size: 14px;
	margin-top: 0px;
}

.portfolio-filter li .button.active {
	color: #470f0e !important;
}

.portfolio-filter li .button.active:hover {
	color: #ffffff !important;
}
/* ... */

